--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,53 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.sideBar {
+  width: 25%;
+  display: block !important;
+  background-color: rgba(184, 115, 51, 0.1)
+}
+
+input {
+  width: 100% !important;
+  font-size: 1rem;
+  height: 2rem;
+  display: block;
+  background-color: rgba(250, 250, 250, 0.9);
+  text-align: center;
+}
+
+#search {
+  color: white;
+}
+
+li {
+  list-style: none;
+  padding: 0.5rem;
+  box-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3);
+  height: 2.7rem;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: rgba(0, 128, 128, 0.6);
+  color: white;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  margin: 1rem;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
+
+.venueName {
+  padding-left: 1rem;
 }
 
 .App-logo {
@@ -27,6 +75,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
