--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,15 @@ li {
   list-style: none;
   padding: 0.5rem;
   box-shadow: 1px 1px 1px rgb(0, 0, 0, 0.3);
-  height: 2.7rem;
+  height: 3.7rem;
   vertical-align: middle;
   cursor: pointer;
   background-color: rgba(0, 128, 128, 0.6);
   color: white;
-  margin-top: 1rem;
+  margin-top: 0.1rem;
   display: flex;
   align-items: center;
+  text-align: center;
 }
 
 ul {
@@ -46,8 +47,27 @@ ul {
   padding-inline-start: 0;
 }
 
-.venueName {
+.placeName {
   padding-left: 1rem;
+  font-size: 1rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+  text-align: center;
+}
+
+.sideBarInfo {
+  font-family: 'Staatliches', cursive;
+  font-size: 1rem;
+  padding: 0;
+  margin-top: 0.2rem;
+}
+
+p {
+  display: block;
+  margin-block-start: 0.1em;
+  margin-block-end: 0.1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .App-logo {
