--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,21 @@
   border-radius: 15px;
 }
 
-.header {
-  height: 10%;
-  width: 100%;
-  background: blue;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-}
-
 .sideBar {
   width: 25%;
   display: block !important;
-  background-color: rgba(184, 115, 51, 0.1)
+  background-color: rgba(184, 115, 51, 0.1);
+}
+
+header {
+  position: relative;
+  z-index: 100;
+  top: 0;
+  background-color: DarkGreen;
+  color: white;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 input {
@@ -69,7 +71,7 @@ ul {
 }
 
 .sideBarInfo {
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   font-size: 1rem;
   padding: 0;
   margin-top: 0.2rem;
@@ -81,35 +83,4 @@ p {
   margin-block-end: 0.1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
