--- a/src/App.css
+++ b/src/App.css
@@ -7,24 +7,15 @@
 }
 
 .bestPhoto {
-  border-radius: 15px;
+  border-radius: 5px;
+  filter: drop-shadow(4px 4px 2px #222);
+  margin-bottom: 0.8rem;
 }
 
 .sideBar {
   width: 25%;
   display: block !important;
   background-color: rgba(184, 115, 51, 0.1);
-}
-
-header {
-  position: relative;
-  z-index: 100;
-  top: 0;
-  background-color: DarkGreen;
-  color: white;
-  display: flex;
-  justify-content: center;
-  width: 100%;
 }
 
 input {
@@ -40,6 +31,20 @@ input {
   color: white;
 }
 
+.venueName {
+  font-size: 2rem;
+  text-shadow: 2px 2px 2px #000000;
+  color: #CAECE5;
+}
+
+.venueInfo {
+  font-size: 1.1rem;
+}
+
+.infoWindowTitle {
+  font-size: 1.5rem;
+}
+
 li {
   list-style: none;
   padding: 0.5rem;
@@ -52,7 +57,6 @@ li {
   margin-top: 0.1rem;
   display: flex;
   align-items: center;
-  text-align: center;
 }
 
 ul {
@@ -67,7 +71,10 @@ ul {
   font-size: 1rem;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
-  text-align: center;
+}
+
+.listPlaces {
+  text-align: left;
 }
 
 .sideBarInfo {
@@ -83,4 +90,87 @@ p {
   margin-block-end: 0.1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+
+#map-canvas {
+  margin: 0;
+  padding: 0;
+  height: 400px;
+  max-width: none;
+}
+
+#map-canvas img {
+  max-width: none !important;
+}
+
+.gm-style-iw {
+  width: 350px !important;
+  top: 15px !important;
+  left: 0px !important;
+  background-color: #fff;
+  box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
+  border: 1px solid rgba(72, 181, 233, 0.6);
+  border-radius: 2px 2px 10px 10px;
+}
+
+/* #iw-container {
+  margin-bottom: 10px;
+} */
+
+/* #iw-container .iw-title {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  padding: 10px;
+  background-color: #48b5e9;
+  color: white;
+  margin: 0;
+  border-radius: 2px 2px 0 0;
+} */
+
+/* #iw-container .iw-content {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  margin-right: 1px;
+  padding: 15px 5px 20px 15px;
+  max-height: 140px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: teal;
+} */
+
+.iw-content img {
+  float: right;
+  margin: 0 5px 5px 10px;
+}
+
+.iw-subTitle {
+  font-size: 16px;
+  font-weight: 700;
+  padding: 5px 0;
+}
+
+/* 
+.iw-bottom-gradient {
+  position: absolute;
+  width: 326px;
+  height: 25px;
+  bottom: 10px;
+  right: 18px;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+} */
+
+@media only screen and (max-width: 650px) {
+  .sideBar {
+    width: 0%;
+  }
+
+  #containerElement {
+    width: 100% !important;
+  }
+
 }
