--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,77 @@
 .App {
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
   display: flex;
-  flex-flow: row nowrap;
-
+  flex-flow: row wrap;
+  text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
-#title {
-  height: 10%;
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 200px;
+  top: 15px;
 }
 
-header {
-  height: 10%;
-  width: 75%;
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: white;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #fbf8ea;
+  padding: 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(255, 255, 255, 1.0);
+  opacity: 0 !important;
 }
 
 .bestPhoto {
@@ -22,24 +80,20 @@ header {
   margin-bottom: 0.8rem;
 }
 
-.sideBar {
-  width: 25%;
-  display: block !important;
-  background-color: rgba(184, 115, 51, 0.1);
-  margin-right: 0;
-}
-
 input {
-  width: 100% !important;
+  width: 90.5% !important;
   font-size: 1rem;
   height: 2rem;
   display: block;
-  background-color: rgba(250, 250, 250, 0.9);
+  background-color: #f6f7fb;
   text-align: center;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  font-weight: bold;
 }
 
 #search {
-  color: white;
+  color: black;
 }
 
 .venueName {
@@ -70,7 +124,7 @@ li {
   vertical-align: middle;
   cursor: pointer;
   background-color: rgba(0, 128, 128, 0.6);
-  color: white;
+  color: #fbf8ea;
   margin-top: 0.1rem;
   display: flex;
   align-items: center;
@@ -113,7 +167,7 @@ p {
 
 .initial {
   font-family: "Bungee Shade", cursive;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 #map-canvas {
@@ -128,41 +182,14 @@ p {
 }
 
 .gm-style-iw {
-  width: 350px !important;
+  width: 250px !important;
   top: 15px !important;
-  left: 0px !important;
+  left: 50px !important;
   background-color: #fff;
   box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
   border: 1px solid rgba(72, 181, 233, 0.6);
   border-radius: 2px 2px 10px 10px;
 }
-
-/* #iw-container {
-  margin-bottom: 10px;
-} */
-
-/* #iw-container .iw-title {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 22px;
-  font-weight: 400;
-  padding: 10px;
-  background-color: #48b5e9;
-  color: white;
-  margin: 0;
-  border-radius: 2px 2px 0 0;
-} */
-
-/* #iw-container .iw-content {
-  font-size: 13px;
-  line-height: 18px;
-  font-weight: 400;
-  margin-right: 1px;
-  padding: 15px 5px 20px 15px;
-  max-height: 140px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  background: teal;
-} */
 
 .iw-content img {
   float: right;
@@ -173,27 +200,4 @@ p {
   font-size: 16px;
   font-weight: 700;
   padding: 5px 0;
-}
-
-/* 
-.iw-bottom-gradient {
-  position: absolute;
-  width: 326px;
-  height: 25px;
-  bottom: 10px;
-  right: 18px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-} */
-
-@media only screen and (max-width: 650px) {
-  .sideBar {
-    width: 0%;
-  }
-
-  #containerElement {
-    width: 100% !important;
-  }
 }
